Lo-fi webpage updated with missing pics

--- a/Project Notebook/lf_prototype.html
+++ b/Project Notebook/lf_prototype.html
@@ -73,7 +73,8 @@
 <p>7. Since the first level serves as a tutorial for the user to understand the gestures needed to play the game, the next screen tells the user “Drag the person onto the image of the thing they like.”</p>
 <img src="img/acememo_lofi.pdf-page-009.jpg" width="300" height="400">
 <p>8. Then 2 boxes containing the person and the thing they like is shown on the screen. The user drags the person onto the object.</p>
-<img src="img/acememo_lofi.pdf-page-00.jpg" width="300" height="400">
+<img src="img/level1-1.jpg" width="300" height="400">
+<img src="img/level1-2.jpg" width="300" height="400">
 <p>9. Once the pairs are matched, the next screen shows that Level 1 is completed. The user has the option to:<br />
 a) Continue to the next level: If the user clicks on this button, he/she will continue to Level 2.<br />
 b) Replay the same level again: If the user clicks on this button, he/she will be taken to Level 1 again. <br />
@@ -85,15 +86,19 @@ User clicks on “Continue to Next Level”.
 <img src="img/acememo_lofi.pdf-page-012.jpg" width="300" height="400">
 <img src="img/acememo_lofi.pdf-page-013.jpg" width="300" height="400">
 <p>11.	This time, the user matches 2 people and what they like.</p>
-<img src="img/acememo_lofi.pdf-page-014.jpg" width="300" height="400">
-<p>12.	Once the user succeeds, he/she proceeds to level 3.</p>
+<img src="img/level2-1.jpg" width="300" height="400">
+<img src="img/level2-2.jpg" width="300" height="400">
+<img src="img/level2-3.jpg" width="300" height="400">
 <img src="img/acememo_lofi.pdf-page-015.jpg" width="300" height="400">
+<p>12.	Once the user succeeds, he/she proceeds to level 3.</p>
 <img src="img/acememo_lofi.pdf-page-016.jpg" width="300" height="400">
 <img src="img/acememo_lofi.pdf-page-017.jpg" width="300" height="400">
 <img src="img/acememo_lofi.pdf-page-018.jpg" width="300" height="400">
 <img src="img/acememo_lofi.pdf-page-019.jpg" width="300" height="400">
 <p>13.	User fails to correctly match one of the pairs in level 3.</p>
-<img src="img/acememo_lofi.pdf-page-020.jpg" width="300" height="400">
+<img src="img/level3-1.jpg" width="300" height="400">
+<img src="img/level3-2.jpg" width="300" height="400">
+<img src="img/level3-3.jpg" width="300" height="400">
 <p>14.	The user is shown the “Game Over!” screen and he sees his score.</p>
 <img src="img/acememo_lofi.pdf-page-021.jpg" width="300" height="400">
 <p>15.	The user can click on “Restart Game” button to play again or can exit the application.</p>
