Loi-fi website final

--- a/Project Notebook/lf_prototype.html
+++ b/Project Notebook/lf_prototype.html
@@ -54,8 +54,9 @@
                             
                             <h4>How We Built It?</h4>
                             <iframe width="420" height="315" src="//www.youtube.com/embed/TNaOH3iR2gA" frameborder="0" allowfullscreen></iframe>
-                            
+                         <p></p>   
                             <h3>Workflow of the Prototype</h3>
+                            <p><strong>Note: All pictures below are shown in order of their flow.</strong></p>
 							<p>1. The welcome screen has a “Connect to Facebook” button. The user clicks on the button to get started.</p>
 <img src="img/acememo_lofi.pdf-page-001.jpg" width="300" height="400">
 <p>2. Then user is prompted about his/her approval of Acememo using his/her Facebook data.</p>
