--- a/Project Notebook/index.html
+++ b/Project Notebook/index.html
@@ -47,7 +47,7 @@
 					
 					<div id="banner">
 						<h2>Current Progress</h2>
-						<span>Our group has just finished the low prototype. <a href="lf_prototype.html" style="color: white;">Click here to view.</a></span>
+						<span>Our group has just finished the initial testing &amp; evaluation. <a href="testplan.html" style="color: white;">Click here to view.</a></span>
 					</div>
 				
 				</div>
