--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -49,7 +49,7 @@
                     <p><img src="img/comp_prototype.jpg"><br />A screenshot from computer prototype of Acememo</p>
                             <p><a href="#usermanual">1. User Manual</a></p>
                             <p><a href="#prototype">2. Prototype Development</a></p>
-                            <p><a href="#usability-testing-">3. Usability Testing Procedures</a></p>
+                            <p><a href="#usability-testing">3. Usability Testing Procedures</a></p>
                             <p><a href="#usability-test">4. Usability Test</a></p>
                             <p><a href="#heuristic-evaluation">5. Heuristic Evaluation</a></p>
                             <p><a href="#contributions">6. Summary of Individual Contributions</a></p>
