--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -765,7 +765,7 @@ is any?
 </p>
 
 <h2><a name="contributions">Summary of Individual Contributions</a></h2>
-<p><strong>Emir Aydin: </strong> Usability Testing + Heuristic Evaluation</p>
+<p><strong>Emir Aydin: </strong> Usability Testing & Procedures  + Heuristic Evaluation + Webmaster</p>
 <p><strong>Alison Van Der Wee: </strong> Prototype Development</p>
 <p><strong>Ruofan Wu: </strong> User Manual</p>
 
