Testing documents uploaded, usability test update

--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -451,33 +451,17 @@ play the game are already illustrated
 <h3>
     Instructions for the Examiner
 </h3>
+<p>1. Go through the <a href="docs/BriefingSession.pdf">briefing session</a> </p>
 <p>
-    1. First, introduce the project
-</p>
+  2. Go through the <a href="docs/PretestQuestionnaire.pdf">pre-test questionnaire</a> </p>
 <p>
-    2. Let the user know that the session is being recorded and ask them to sign the consent form to have their full 
-
-consent on using all the data acquired
-    from the testing
-</p>
+    3. Conduct the <a href="#usability-test">usability evaluation</a> </p>
 <p>
-    3. Go through the briefing session
-</p>
+    4. Conduct the <a href="#heuristic-evaluation">heuristic evaluation</a> (might be completed at a different session) </p>
 <p>
-    4. Go through the pre-test questionnaire
-</p>
+    5. Go through the <a href="docs/DebriefingSession.pdf">debriefing session</a> </p>
 <p>
-    5. Conduct the usability evaluation
-</p>
-<p>
-    6. Conduct the heuristic evaluation
-</p>
-<p>
-    7. Go through the debriefing session
-</p>
-<p>
-    8. Conduct the post-test questionnaire
-</p>
+    6. Conduct the <a href="docs/PosttestQuestionnaire.pdf">post-test questionnaire</a> </p>
 <h3>
     Effects of the Feedback on Design Decisions
 </h3>
@@ -520,7 +504,7 @@ Whether the task resulted with optimal or
 </h4>
 <p>
     <strong>Instructions:</strong>
-    The application is now opened. Please proceed to set up the game, but don’t start playing.
+    The application is now opened. Please navigate to the screen where you will start the game, but don’t start playing.
 </p>
 <p>
     <strong>Optimal Action:</strong>
@@ -541,17 +525,15 @@ Whether the task resulted with optimal or
 </h4>
 <p>
     <strong>Instructions:</strong>
-    Please take a look at instructions on how to play the game.
+    Please take a look at instructions on how to play the game and proceed to the next screen.
 </p>
 <p>
     <strong>Optimal Action:</strong>
-    The user swipes on the screen to see the next how to play instructions.
+    The user understands the instructions and presses &quot;Start Playing!&quot;.
 </p>
 <p>
     <strong>Failing Action:</strong>
-    The user does not know how to go through the instructions or does not realize she has to swipe to see the further 
-
-instructions.
+    The user does not understand the instructions.
 </p>
 <p>
     <strong>Observations to be Recorded:</strong>
@@ -562,14 +544,14 @@ instructions.
 </h4>
 <p>
     <strong>Instructions:</strong>
-    You can now start playing.
+    You can now start playing. Start with 1 pair.
 </p>
 <p>
     <strong>Optimal Action: </strong>
-    The user clicks on “Play Game”, then presses on “Start” after choosing number of pairs. Then proceeds to Level 1: 
+    The user  presses on “Start” after choosing number of pairs. Then proceeds to Level 1: 
 
 Clicks “I’m ready” after seeing the first
-    pair of cards.
+    pair of objects.
 </p>
 <p>
     <strong>Failing Action:</strong>
@@ -590,7 +572,7 @@ Clicks “I’m ready” after seeing the first
 </p>
 <p>
     <strong>Optimal Action:</strong>
-    The user drags and drops the person onto the object they like.
+    The user drags and drops the person onto the object they like. Then presses done.
 </p>
 <p>
     <strong>Failing Action:</strong>
@@ -605,7 +587,7 @@ Clicks “I’m ready” after seeing the first
 </h4>
 <p>
     <strong>Instructions:</strong>
-    Please replay this level after completing.
+    Please continue to next level, finish it  and then replay  after completing.
 </p>
 <p>
     <strong>Optimal Action:</strong>
@@ -627,17 +609,16 @@ Replay Level then completes the level
 </h4>
 <p>
     <strong>Instructions:</strong>
-    Now, we want you to fail at this level and learn what you did wrong – and share your learnings with us.
-</p>
+    Please continue to next level. Now, we want you to fail at this level and see the correct answers.</p>
 <p>
     <strong>Optimal Action:</strong>
-    After failing, the user presses “See Previous Answers” and observes her mistakes and successfully shares her correct 
+    After failing, the user presses “See Correct Answers” and observes her mistakes and successfully shares her correct 
 
 and wrong answers with the examiners.
 </p>
 <p>
     <strong>Failing Action:</strong>
-    The user fails to recognize “See Previous Answers” button within 10 seconds or the user does not successfully 
+    The user fails to recognize “See Correct Answers” button within 10 seconds or the user does not successfully 
 
 identify her correct and wrong answers.
 </p>
@@ -650,11 +631,11 @@ identify her correct and wrong answers.
 </h4>
 <p>
     <strong>Instructions:</strong>
-    Now, please start the game at 3 pairs of cards.
+    Now, please start the game at 3 pairs of objects.
 </p>
 <p>
     <strong>Optimal Action:</strong>
-    The user presses on “Restart Game” and presses the up arrow to increase the game level, then presses “Start”.
+    The user presses on “Restart Game” and presses the up arrow to increase the game level up to 3, then presses “Start Playing!”.
 </p>
 <p>
     <strong>Failing Action:</strong>
