--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -587,7 +587,7 @@ Clicks “I’m ready” after seeing the first
 </h4>
 <p>
     <strong>Instructions:</strong>
-    Please continue to next level, finish it  and then replay  after completing.
+    Please continue to next level. Now please complete this level successfully and then play the same level again.
 </p>
 <p>
     <strong>Optimal Action:</strong>
@@ -649,7 +649,7 @@ identify her correct and wrong answers.
     <a name="heuristic-evaluation">Heuristic Evaluation</a>
 </h2>
 <p>
-    We use heuristic evaluation to test our usability goals and get some expert advice on how to improve our design.
+    We use heuristic evaluation to test our usability goals and get some expert advice on how to improve our design. Our heuristics are inspired from that of Nielsen's; however, we had to modify them to match our needs. For example, as Nielsen proposes navigability, we cannot let user go back all the time because that would be cheating in the context of a memory game. However, we let them go back once they complete a level, so that they can see the correct answers.
 </p>
 <h3>
     1. Encourage the User to Learn by Failure
