--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -572,11 +572,11 @@ Clicks “I’m ready” after seeing the first
 </p>
 <p>
     <strong>Optimal Action:</strong>
-    The user drags and drops the person onto the object they like. Then presses done.
+    The user drags and drops the person onto the object they like. Then presses &quot;Done&quot;.
 </p>
 <p>
     <strong>Failing Action:</strong>
-    The user spends more than 20 seconds understanding the drag &amp; drop action.
+    The user spends more than 20 seconds understanding the drag &amp; drop action. The user does not press the &quot;Done&quot; button.
 </p>
 <p>
     <strong>Observations to be Recorded:</strong>
