--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -612,13 +612,13 @@ Replay Level then completes the level
     Please continue to next level. Now, we want you to fail at this level and see the correct answers.</p>
 <p>
     <strong>Optimal Action:</strong>
-    After failing, the user presses “See Correct Answers” and observes her mistakes and successfully shares her correct 
+    After failing, the user presses “View Correct Answers” and observes her mistakes and successfully shares her correct 
 
 and wrong answers with the examiners.
 </p>
 <p>
     <strong>Failing Action:</strong>
-    The user fails to recognize “See Correct Answers” button within 10 seconds or the user does not successfully 
+    The user fails to recognize “View Correct Answers” button within 10 seconds or the user does not successfully 
 
 identify her correct and wrong answers.
 </p>
