--- a/Notebook/comp_prototype.html
+++ b/Notebook/comp_prototype.html
@@ -20,7 +20,7 @@
 			<div class="5grid">
 				<div class="12u-first">
 					<header id="pageTitle">
-						<h1><a href="#">Group 5's Project [TBD]</a></h1>
+						<h1><a href="#">Group 5: Acememo</a></h1>
 					</header>
 					<header id="header">
 						<nav>
