Alpha system notebook

--- a/Notebook/alphasystem.html
+++ b/Notebook/alphasystem.html
@@ -20,7 +20,7 @@
 			<div class="5grid">
 				<div class="12u-first">
 					<header id="pageTitle">
-						<h1><a href="#">Group 5's Project [TBD]</a></h1>
+						<h1><a href="#">Group 5: Acememo</a></h1>
 					</header>
 					<header id="header">
 						<nav>
@@ -47,8 +47,170 @@
 						
 						<section>
 							<h2>Alpha System</h2>
-							<p>Under Construction.
+							<p><a href="#evolution">1. Evolution of the Interface</a></p>
+                            <p><a href="#test-observations">1-a. Summary of Test Observations </a></p>
+                            <p><a href="#group3-feedback">1-b. Summary of Heuristic Evaluation and Design Critique</a></p>
+                            <p><a href="#comparison">1-c. Comparison with Earlier Results</a></p>
+							<p><a href="#improvements">1-d. Prototype Improvements</a></p>
+							<p><a href="#updated-user-manual">2. Updated User Manual</a></p>
+							<p><a href="#summary-of-contributions">3. Summary of Contributions</a></p>
+
 						</section>
+
+						<h2>
+    <a name="evolution">Evolution of the Interface</a>
+</h2>
+<h3>
+    <a name="test-observations">Summary of Test Observations</a>
+</h3>
+<p>
+    Subject 1: This subject has never used a mobile device before, thus does not know how to interact with a mobile device. He also never played a memory game
+    before. He was confused at pretty much every step of testing. Him not being able to understand that multiple users can have multiple likes is an important
+    feedback to consider.
+</p>
+<p>
+    Subject 2: This subject has used an iPad before, so she is a relatively experienced user. She also has played card-based physical memory games before. One
+    of the important observations from her testing is the fact that she didn’t recognize she had to drag the objects unless they were not aligned with the
+    person associated. She also had hard time dragging objects because they were too small.
+</p>
+<h3>
+    <a name="group3-feedback">Summary of Heuristic Evaluation and Design Critique</a>
+</h3>
+<p>
+    Throughout their heuristic evaluation and design critique of our project;
+</p>
+<p>
+    <strong>Group 3 seemed to like (strengths):</strong>
+</p>
+<p>
+    - The simple game interface
+</p>
+<p>
+    - “Show Correct Answers” screen
+</p>
+<p>
+    <strong>They had constructive feedback about (weaknesses):</strong>
+</p>
+<p>
+    - “Correct Answers” screen doesn’t show the wrong answers, only the correct ones
+</p>
+<p>
+    - Thumbnails are very small and with increasing game levels, it will become hard to read
+</p>
+<p>
+    - There needs to be a visual indication of successful drag and drop
+</p>
+<p>
+    - They thought replacing the heart icon with an arrow would be better sign of the relationship between objects
+</p>
+<p>
+    - The instructions could be highlighted more
+</p>
+<p>
+    <strong>A Comment on Design Critique:</strong>
+    It was suggested that focusing on either non-Facebook audience, Facebook audience or both. Referring to results of our earlier testing we have already
+    decided to go with the third option: Facebook and non-Facebook audience.
+</p>
+<h3>
+    <a name="comparison">Comparison with Earlier Results</a>
+</h3>
+<p>
+    Our initial evaluator who evaluated the low-fidelity prototype had helped us identify 3 important improvements:
+</p>
+<p>
+    <strong>1. </strong>
+    <strong>Let the User Know the Correct Answers:</strong>
+    Our initial evaluator has told us to show the correct answers to users to help them improve their score by letting them learn their mistakes. Subject 2
+    gave feedback in this test that confirmed the importance of this.
+</p>
+<p>
+    <strong>2. </strong>
+    <strong>Score the User to Incentivize Her:</strong>
+    This was also brought up by Subject 2 in formative feedback. She emphasized the importance of scoring the user to keep her motivated. Scoring system was
+    not implemented in the computer prototype.
+</p>
+<p>
+    <strong>3. </strong>
+    <strong>Implement Gameplay without Facebook:</strong>
+    Subject 1 of this testing fits one of our initial personas and he does not have a Facebook account. This issue was brought up by our subject in lo-fi
+    prototype testing and we decided to have an option to play the game without Facebook.
+</p>
+<h3>
+    <a name="improvements">Prototype Improvements</a>
+</h3>
+<h4>
+    1. Increase the Size of the Pictures
+</h4>
+<p>
+    Based on our observations on testing with both subject, users had difficulties in dragging the pictures. We have decided to increase the size of the
+    pictures – a reasonable size that is enough to handle with tip of a finger.
+</p>
+<h4>
+    2. Don’t Align the Pictures
+</h4>
+<p>
+    Our observations from testing with Subject 2 has showed that aligning the pictures of the likes with the people can make the drag &amp; drop action
+    unclear. We have actually thought about this earlier but now that the results have shown, we have decided to have random placements for objects on the
+    screen.
+</p>
+<h4>
+    3. Implement Scoring System
+</h4>
+<p>
+    This is a change that has been brought up both by subjects and Group 3 and we have thought about this earlier as well. We believe the current levels can
+    serve as an incentive for the user. However, this is on top of our list for the “improvements to the alpha system” milestone, we will implement this.
+</p>
+<h4>
+    4. Having Only One Like Per Person
+</h4>
+<p>
+    This has been brought up by Subject 2. She was confused at Level 3 when she has seen many likes for the same people. Then this was suggested by the
+    heuristic evaluation
+</p>
+<h4>
+    5. Having a Visual Feedback for Drag and Drop
+</h4>
+<p>
+    Earlier, this has been planned to be in the alpha version but wasn’t included in the prototype because of the complexity of implementation. We have
+    implemented a visual feedback for drag and drop, which makes the pictures of people more responsive to the object being dragged on them – automatically
+    drops them once they are within a certain range. This also allows us to indicate both correct and wrong answers with different colors after the gameplay on
+    the “Show Correct Answers” screen.
+</p>
+<h4>
+    6. Simplifying the “Fact Display” Screen
+</h4>
+<p>
+    In their heuristic evaluation, Group 3 has suggested that we remove the heart icon with an arrow. However, after a brainstorming session, we have decided
+    that even an arrow would be a restatement of the same thing because there is a text that says “Emir likes Pizza” and same sentence below is expressed in
+    pictures. We have decided to merge these two by having text of the pictures below them and getting rid of the heart icon. So what you see on this screen is
+    Emir’s picture in a frame which also includes the text “Emir” below. Next to it is the word “likes” and then next to it is a frame of a pizza picture with
+    “Pizza” text below.
+</p>
+<h2>
+    <a name="updated-user-manual">Updated User Manual</a>
+</h2>
+<p>
+    <strong><a href="docs/UpdatedManualWithRevisions.pdf">Click here</a></strong>
+    to view the updated user manual <strong>with</strong> marked revisions.
+</p>
+<p>
+    <strong><a href="docs/UpdatedManualWithoutRevisions.pdf">Click here</a></strong>
+    to view the updated user manual <strong>without</strong> marked revisions.
+</p>
+<h2>
+    <a name="summary-of-contributions">Summary of Contributions</a>
+</h2>
+<p>
+    <strong>Emir Aydin:</strong>
+    Documentation of this Webpage + Prototype Development (less) + Webmaster
+</p>
+<p>
+    <strong>Alison Van Der Wee:</strong> Prototype Development (more)
+</p>
+<p>
+    <strong>Ruofan Wu:</strong>
+    Prototype Development (more) + Updated User Manual
+</p>
 					
 					</div>
 				</div>
