Improvements to alpha webpage added

--- a/Notebook/proposal.html
+++ b/Notebook/proposal.html
@@ -20,7 +20,7 @@
 			<div class="5grid">
 				<div class="12u-first">
 					<header id="pageTitle">
-						<h1><a href="#">AceMemo</a></h1>
+						<h1><a href="#">Group 5: Acememo</a></h1>
 					</header>
 					<header id="header">
 						<nav>
@@ -31,9 +31,9 @@
 							<a href="comp_prototype.html">Computer<br> Prototype</a>
 							<a href="feedback.html">Formative <br> Feedback</a>
 							<a href="alphasystem.html">Alpha<br> System</a>
-							<a href="presentation.html">Final <br>Presentation</a>
 							<a href="improvements.html">Improvements <br>on Alpha</a>
-							<a href="finalreport.html">Final<br> Report</a>							
+							<a href="presentation.html">Final <br>Presentation</a>
+
 						</nav>
 					</header>
 				
